k8s/fraud-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-worker
  labels:
    app: fraud-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-worker
  template:
    metadata:
      labels:
        app: fraud-worker
    spec:
      containers:
      - name: fraud-worker
        image: 802104113126.dkr.ecr.ap-south-1.amazonaws.com/fraud-worker:a67aa408fbaa1576d6a4cfdb27ed06d34c0de365
        resources:
          limits:
            cpu: "100m"
            memory: "128Mi"
          requests:
            cpu: "50m"
            memory: "64Mi"
