k8s/ingestion-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion-api
  labels:
    app: ingestion-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingestion-api
  template:
    metadata:
      labels:
        app: ingestion-api
    spec:
      containers:
      - name: ingestion-api
        image: 802104113126.dkr.ecr.ap-south-1.amazonaws.com/ingestion-api:latest
        ports:
        - containerPort: 5001
        resources:
          limits:
            cpu: "100m"
            memory: "128Mi"
          requests:
            cpu: "50m"
            memory: "64Mi"
