k8s/ingestion-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestion-api-service
spec:
  type: ClusterIP
  selector:
    app: ingestion-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
